--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,10 @@ dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "black>=22.0",
+    "isort>=5.12.0",
     "flake8>=5.0",
     "mypy>=1.0",
+    "types-requests>=2.28.0",
     "pre-commit>=2.20",
 ]
 
@@ -50,9 +52,23 @@ beem-sms = "beem_sms.cli:main"
 [tool.setuptools.dynamic]
 version = {attr = "beem_sms.__version__"}
 
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+exclude = [".git", "__pycache__", "dist"]
+
 [tool.black]
 line-length = 88
 target-version = ["py38"]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
 
 [tool.pytest.ini_options]
 minversion = "7.0"
