--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "Professional Python SDK for Beem SMS API"
 readme = "README.md"
 requires-python = ">=3.8"
-license = "MIT"
+license = {text = "MIT License - Copyright (c) 2025 James Mashaka"}
 keywords = ["sms", "beem", "tanzania", "messaging", "api", "sdk"]
 authors = [
     {name = "James Mashaka", email = "j1997ames@gmail.com"},
