--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dev = [
     "mypy>=1.0",
     "types-requests>=2.28.0",
     "pre-commit>=2.20",
+    "sphinx>=5.0",
+    "sphinx-rtd-theme>=1.0",
+    "myst-parser>=0.18",
 ]
 
 [project.urls]
