--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,6 +7,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  jobs:
+    post_create_environment:
+      - pip install --upgrade pip setuptools wheel
 
 python:
   install:
@@ -21,3 +24,8 @@ sphinx:
 formats:
   - pdf
   - epub
+
+# Search configuration
+search:
+  ranking:
+    index.html: 1
